# norn

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  CONVENTIONS.toml  Cargo.toml  MERIDIAN-HANDOFF.md  PLAN.md  README.md  REVIEW.md  doctoroxide.toml  rust-toolchain.toml
crates/norn/: Cargo.toml  build.rs
crates/norn-cli/: Cargo.toml
crates/norn-cli/src/: herdr.rs  lib.rs  main.rs  nofile.rs  nofile_tests.rs
crates/norn-cli/src/cli/: args.rs  error.rs  exit.rs  mcp_args.rs  mod.rs  mode.rs  session_args.rs
crates/norn-cli/src/commands/: auth.rs  auth_foreign_home_tests.rs  auth_state_matrix_tests.rs  completion.rs  doctor.rs  doctor_tests.rs  mcp.rs  mcp_config.rs  mcp_config_tests.rs  mod.rs  session.rs  session_export.rs  session_legacy.rs  session_output.rs
crates/norn-cli/src/config/: assembly.rs  event_schemas.rs  extensions.rs  mod.rs  model_aliases.rs  overrides.rs  paths.rs  profile_loader.rs  provider_auth.rs  provider_auth_tests.rs  provider_selection.rs  rules.rs  variables.rs
crates/norn-cli/src/print/: driven.rs  error.rs  intervene.rs  jsonrpc.rs  mod.rs  orchestrator.rs  output.rs  provider.rs  provider_tests.rs  provider_trace.rs  session.rs  step_output.rs  stream_renderer.rs
crates/norn-cli/src/runtime/: builder.rs  bundle.rs  from_cli.rs  mcp.rs  mcp_tests.rs  mod.rs  resolve.rs  wiring.rs
crates/norn-cli/src/session/: mod.rs
crates/norn-cli/src/tui/: driver.rs  mod.rs  startup_trace.rs
crates/norn-cli/tests/: assembly_acceptance.rs  assembly_conformance.rs  assembly_flag_wiring.rs  build_runtime_integration.rs  driver_executor.rs  index_lock_deadline.rs  jsonrpc_driven_mode.rs  print_error_envelope.rs  session_output_redaction.rs  session_resume_working_dir.rs
crates/norn-macros/: Cargo.toml
crates/norn-macros/src/: lib.rs
crates/norn-macros/src/follow_up/: codegen.rs  expand.rs  mod.rs  parse.rs
crates/norn-macros/src/tool_args/: derive.rs  enum_schema.rs  mod.rs  parse.rs  rename.rs  schema.rs  serde_attrs.rs  tool_attrs.rs  validate.rs
crates/norn-macros/tests/: compile_fail.rs  tool_args.rs
crates/norn-macros/tests/ui/: external_tagging.rs  external_tagging.stderr  flatten_in_variant.rs  flatten_in_variant.stderr  flatten_non_struct.rs  flatten_non_struct.stderr  generic_struct.rs  generic_struct.stderr  hashmap_non_string_key.rs  hashmap_non_string_key.stderr  missing_doc.rs  missing_doc.stderr  tuple_variant.rs  tuple_variant.stderr  unknown_rename_rule.rs  unknown_rename_rule.stderr  unknown_tool_args_key.rs  unknown_tool_args_key.stderr  unsupported_type.rs  unsupported_type.stderr  untagged_duplicate_unit.rs  untagged_duplicate_unit.stderr
crates/norn-tui/: Cargo.toml
crates/norn-tui/examples/: demo.rs
crates/norn-tui/src/: error.rs  lib.rs
crates/norn-tui/src/agents/: activity_log.rs  mod.rs  status_line.rs  tabs.rs  tree.rs
crates/norn-tui/src/app/: active_input.rs  autocomplete.rs  child_results.rs  dispatch.rs  edit.rs  event_loop.rs  helpers.rs  mcp_slash.rs  mod.rs  render.rs  rotation.rs  session_replay.rs  slash.rs  slash_catalog.rs  state.rs  streaming.rs  tool_calls.rs  turn.rs
crates/norn-tui/src/events/: display_toggles.rs  mod.rs  schema_render.rs
crates/norn-tui/src/input/: autocomplete.rs  editor.rs  history.rs  keybindings.rs  mod.rs  navigation.rs  wrap.rs
crates/norn-tui/src/render/: content.rs  fixed_panel.rs  markdown.rs  mod.rs  scroll_region.rs  style.rs  syntax.rs  text.rs  thinking.rs
crates/norn-tui/src/terminal/: caps.rs  mod.rs  setup.rs
crates/norn-tui/src/tools/: compact.rs  helpers.rs  minimal.rs  mod.rs  renderer.rs  status.rs  verbosity.rs
crates/norn-tui/tests/: pty_smoke.rs
crates/norn/.norn/fetched/: 0b0e6d4a94a9a4bb.md  128d693158dd1342.md  2735d011ee520f5a.md  2d2ee45bb6dc7cf4.md  3b00a14087f2b80e.md  50e7258ab70dfd54.md  5179f3a4a357412f.md  54fc530d9a450c0c.md  5e77937fde99f6d5.md  6713cad946e88ba9.md  8b09497fbe78771c.md  a63c038f60a4cfad.md  a9d5aa3775bc5551.md  be2ef9965cd0bf00.md  de3813cf0294bea3.md  e5453aebb09e07ba.md
crates/norn/examples/: chat.rs  login.rs  smoke.rs
crates/norn/reference/jcode/: webfetch.rs  websearch.rs
crates/norn/reference/openai/: responses-text.md
crates/norn/reference/pi/: session-sqlite.rs  session-store-v2.rs  session.rs
crates/norn/src/: error.rs  lib.rs  model_catalog.rs  runtime_init.rs
crates/norn/src/agent/: arming.rs  assembly.rs  build_support.rs  builder.rs  builder_setters.rs  child_policy.rs  credential_affinity_tests.rs  fork.rs  fork_canonical_resolution_tests.rs  fork_context_filter.rs  fork_context_filter_error.rs  fork_context_filter_error_tests.rs  fork_d3_projection_tests.rs  fork_provider_compaction_tests.rs  goals.rs  handle.rs  instance.rs  mailbox.rs  mcp.rs  mcp_tests.rs  message_router.rs  mod.rs  monitor.rs  output.rs  pending_delivery.rs  pending_mailbox.rs  pending_messages.rs  pending_messages_tests.rs  pending_queue.rs  pending_record.rs  pending_replay.rs  pending_replay_tests.rs  pending_teardown.rs  pending_teardown_tests.rs  pending_transition.rs  pending_transition_tests.rs  process_delivery.rs  prompt_install.rs  registry.rs  registry_assembly.rs  (+5 more)
crates/norn/src/config/: loader.rs  mcp.rs  mcp_approval.rs  mcp_approval_tests.rs  mcp_local.rs  mcp_patch.rs  mcp_patch_tests.rs  mcp_state.rs  mcp_state_tests.rs  mcp_state_types.rs  mcp_tests.rs  mcp_workspace_write.rs  mcp_workspace_write_tests.rs  merge.rs  merge_tests.rs  mod.rs  paths.rs  paths_session_tests.rs  permissions.rs  provider_auth.rs  provider_auth_tests.rs  provider_security.rs  types.rs  validate.rs
crates/norn/src/context/: loader.rs  mod.rs  rule_origin_tests.rs  scanner.rs  types.rs
crates/norn/src/error/: subsystems.rs  tests.rs
crates/norn/src/integration/: diagnostics.rs  extensions.rs  mcp_candidate_builder.rs  mcp_candidate_builder_tests.rs  mcp_client.rs  mcp_client_protocol_tests.rs  mcp_client_schema.rs  mcp_client_transport.rs  mcp_context_call_tests.rs  mcp_http.rs  (+35 more)
crates/norn/tests/: follow_up.rs  model_catalog_build.rs  provider_auth_policy_api.rs  skill_tool_assembly.rs  static_codex_provider_api.rs
(+1785 files in other folders)
