[package]
name = "norn-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }

[dev-dependencies]
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
trybuild = "1"

[lints]
workspace = true
